# caugi

./: .Rbuildignore  .envrc  .gitignore  404.html  AGENTS.html  AGENTS.md  CLAUDE.html  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  Taskfile.yml  _pkgdown.yml  authors.html  authors.md  caugi.Rproj  codecov.yml  copilot-instructions.html  copilot-instructions.md  cran-comments.md  devenv.nix  flake.nix  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  test.R
R/: DSL-parser.R  (+37 more)
src/rust/: Cargo.toml  vendor-config.toml  vendor.tar.xz
src/rust/src/: lib.rs
src/rust/src/edges/: mod.rs  query_flags.rs
src/rust/src/ffi/: adjustment.rs  builder.rs  helpers.rs  metrics.rs  mod.rs  queries.rs  registry.rs  transforms.rs
src/rust/src/graph/: admg.rs  alg.rs  builder.rs  dag.rs  error.rs  graph_type.rs  graphml.rs  layout.rs  metrics.rs  mod.rs  packed.rs  pdag.rs  serialization.rs  session.rs  ug.rs  view.rs
src/rust/src/graph/admg/: adjustment.rs  districts.rs  mod.rs  msep.rs
src/rust/src/graph/ag/: mod.rs  msep.rs
src/rust/src/graph/alg/: acyclic.rs  bitset.rs  csr.rs  meek.rs  min_msep.rs  moral.rs  reachability.rs  subsets.rs  topo_sort.rs  traversal.rs
src/rust/src/graph/dag/: adjustment.rs  mod.rs  separation.rs  transforms.rs
src/rust/src/graph/layout/: bipartite.rs  circle.rs  components.rs  force_directed.rs  kamada_kawai.rs  mod.rs  normalize.rs  optimizer.rs  sugiyama.rs  tiered.rs
src/rust/src/graph/mpdag/: mod.rs
src/rust/src/graph/pdag/: cpdag.rs  mod.rs  transforms.rs
src/rust/src/graph/traits/: capabilities.rs  markers.rs  mod.rs
src/rust/src/reactive/: mod.rs
(+956 files in other folders)
