[package]
name = 'caugi'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.75'
license = 'MIT'

[lib]
crate-type = [ 'staticlib' ]
name = 'caugi'

[dependencies]
extendr-api = '0.8.1'
bitflags = '2.9.3'
gadjid = { git = "https://github.com/CausalDisco/gadjid", package = 'gadjid', rev = '099d750b0c93ae20ab9b7664a11eed7932335998', optional = true }

[features]
default = ['gadjid']
gadjid = ['dep:gadjid']

[profile.release]
lto = true
codegen-units = 1
