[package]
name = 'caugi'
publish = false
version = '0.1.1'
edition = '2021'
rust-version = '1.75'
license = 'MIT'

[lib]
crate-type = [ 'staticlib' ]
name = 'caugi'

[dependencies]
extendr-api = '0.8.1'
bitflags = '2.9.3'
gadjid = { git = "https://github.com/CausalDisco/gadjid", package = 'gadjid', rev = '5b97028d4e943ce8a642d2b7bc1145f5435f619a', optional = true }

[features]
default = ['gadjid']
gadjid = ['dep:gadjid']

[profile.release]
lto = true
codegen-units = 1
