[package]
name = 'caugi'
publish = false
version = '0.4.0'
edition = '2021'
rust-version = '1.80'
license = 'MIT'

[lib]
crate-type = [ 'staticlib' ]
name = 'caugi'

[dependencies]
extendr-api = '0.8.1'
bitflags = '2.9.3'
gadjid = { git = "https://github.com/CausalDisco/gadjid", package = 'gadjid', rev = '5b97028d4e943ce8a642d2b7bc1145f5435f619a', optional = true }
rust-sugiyama = '0.4.0'
fdg-sim = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }

[features]
default = ['gadjid']
gadjid = ['dep:gadjid']

[profile.release]
lto = true
codegen-units = 1
